--- a/static/atom-ui/styles/text.less
+++ b/static/atom-ui/styles/text.less
@@ -174,6 +174,9 @@ mark,
   .bg-variant(@state-danger-bg);
 }
 
+// Line highlight
+
+.line-highlight { background-color: @background-color-highlight}
 
 // Highlight
 // -------------------------
